--- a/favorites.html
+++ b/favorites.html
@@ -50,7 +50,7 @@
                         <div class="favorite-actions">
                             <button class="remove-favorite">✕</button>
                         </div>
-                        <img src="https://via.placeholder.com/200" alt="Smartphone">
+                        <img src="images/Smart Phone.jpg" alt="Smartphone">
                         <h3>Smartphone</h3>
                         <p class="description">Latest model with advanced features</p>
                         <p class="price">$699.99</p>
@@ -63,7 +63,7 @@
                         <div class="favorite-actions">
                             <button class="remove-favorite">✕</button>
                         </div>
-                        <img src="https://via.placeholder.com/200" alt="Smart Watch">
+                        <img src="images/Smart Watch.jpg" alt="Smart Watch">
                         <h3>Smart Watch</h3>
                         <p class="description">Fitness and health tracking</p>
                         <p class="price">$299.99</p>
@@ -76,7 +76,7 @@
                         <div class="favorite-actions">
                             <button class="remove-favorite">✕</button>
                         </div>
-                        <img src="https://via.placeholder.com/200" alt="Wireless Earbuds">
+                        <img src="images/Wireless Earbuds.jpg" alt="Wireless Earbuds">
                         <h3>Wireless Earbuds</h3>
                         <p class="description">Premium sound quality with ANC</p>
                         <p class="price">$199.99</p>
