--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
             <ul class="nav-links">
                 <li><a href="index.html" class="active">Home</a></li>
                 <li><a href="products.html">Products</a></li>
-                <li><a href="cart.html">Cart</a></li>
                 <li><a href="my-orders.html">My Orders</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
@@ -51,25 +50,25 @@
             <h2>Featured Products</h2>
             <div class="product-grid">
                 <div class="product-card">
-                    <img src="https://via.placeholder.com/200" alt="Product 1">
+                    <img src="images/Stylish Watch.jpg" alt="Product 1">
                     <h3>Stylish Watch</h3>
                     <p class="price">$99.99</p>
                     <button class="btn">Add to Cart</button>
                 </div>
                 <div class="product-card">
-                    <img src="https://via.placeholder.com/200" alt="Product 2">
+                    <img src="images/Leather Bag.jpg" alt="Product 2">
                     <h3>Leather Bag</h3>
                     <p class="price">$149.99</p>
                     <button class="btn">Add to Cart</button>
                 </div>
                 <div class="product-card">
-                    <img src="https://via.placeholder.com/200" alt="Product 3">
+                    <img src="images/Sunglasses.jpg" alt="Product 3">
                     <h3>Sunglasses</h3>
                     <p class="price">$79.99</p>
                     <button class="btn">Add to Cart</button>
                 </div>
                 <div class="product-card">
-                    <img src="https://via.placeholder.com/200" alt="Product 4">
+                    <img src="images/Smart Speaker.jpg" alt="Product 4">
                     <h3>Smart Speaker</h3>
                     <p class="price">$199.99</p>
                     <button class="btn">Add to Cart</button>
