--- a/cart.html
+++ b/cart.html
@@ -46,10 +46,10 @@
             <div class="cart-container">
                 <div class="cart-items">
                     <div class="cart-item">
-                        <img src="https://via.placeholder.com/100" alt="Product 1">
+                        <img src="images/Stylish Watch.jpg" alt="Product 1">
                         <div class="item-details">
-                            <h3>Smartphone</h3>
-                            <p class="price">$699.99</p>
+                            <h3>Stylish Watch</h3>
+                            <p class="price">$99.99</p>
                         </div>
                         <div class="quantity">
                             <button class="qty-btn">-</button>
@@ -59,7 +59,7 @@
                         <button class="remove-btn">Remove</button>
                     </div>
                     <div class="cart-item">
-                        <img src="https://via.placeholder.com/100" alt="Product 2">
+                        <img src="images/Wireless_Headphones.jpg" alt="Product 2">
                         <div class="item-details">
                             <h3>Headphones</h3>
                             <p class="price">$149.99</p>
