--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us - Team06</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <header>
         <nav>
@@ -72,8 +74,8 @@
                         <div>
                             <h3>Business Hours</h3>
                             <p>Monday - Friday: 9:00 AM - 6:00 PM<br>
-                            Saturday: 10:00 AM - 4:00 PM<br>
-                            Sunday: Closed</p>
+                                Saturday: 10:00 AM - 4:00 PM<br>
+                                Sunday: Closed</p>
                         </div>
                     </div>
                 </div>
@@ -105,8 +107,9 @@
             <div class="map-container">
                 <h2>Our Location</h2>
                 <div class="map">
-                    <!-- Replace with actual map embed code -->
-                    <img src="https://via.placeholder.com/1200x400" alt="Map">
+                    <iframe width="600" height="450" style="border:0" loading="lazy" allowfullscreen
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3151.835434509374!2d144.9630579153168!3d-37.81627977975195!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad642af0f11fd81%3A0xf577d8b8f9b1e0b!2sEiffel+Tower!5e0!3m2!1sen!2sfr!4v1618304000000!5m2!1sen!2sfr">
+                    </iframe>
                 </div>
             </div>
         </section>
@@ -138,4 +141,5 @@
     </footer>
     <script src="script.js"></script>
 </body>
+
 </html>
