#Fix images and title

--- a/about.html
+++ b/about.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - Team06</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <header>
         <nav>
@@ -32,7 +34,9 @@
                 <h1>About Team06</h1>
                 <div class="about-story">
                     <h2>Our Story</h2>
-                    <p>Founded in 2024, Team06 has grown from a small startup to one of the leading e-commerce platforms. Our mission is to provide high-quality products at competitive prices while ensuring an exceptional shopping experience for our customers.</p>
+                    <p>Founded in 2024, Team06 has grown from a small startup to one of the leading e-commerce
+                        platforms. Our mission is to provide high-quality products at competitive prices while ensuring
+                        an exceptional shopping experience for our customers.</p>
                 </div>
 
                 <div class="about-values">
@@ -44,7 +48,8 @@
                         </div>
                         <div class="value-card">
                             <h3>Customer First</h3>
-                            <p>Our customers are at the heart of everything we do. We strive to exceed their expectations.</p>
+                            <p>Our customers are at the heart of everything we do. We strive to exceed their
+                                expectations.</p>
                         </div>
                         <div class="value-card">
                             <h3>Innovation</h3>
@@ -106,4 +111,5 @@
         </div>
     </footer>
 </body>
+
 </html>
