--- a/my-orders.html
+++ b/my-orders.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Orders - Team06</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <header>
         <nav>
             <div class="logo">Team06</div>
             <div class="burger-menu">
-                <div class="burger-icon">
+                <div class="burger-icon nav-active">
                     <span></span>
                     <span></span>
                     <span></span>
@@ -57,7 +59,7 @@
                     </div>
                     <div class="order-items">
                         <div class="order-item">
-                            <img src="https://via.placeholder.com/100" alt="Product 1">
+                            <img src="images/Smart Phone.jpg" alt="Product 1">
                             <div class="item-details">
                                 <h4>Smartphone</h4>
                                 <p>Quantity: 1</p>
@@ -65,7 +67,7 @@
                             </div>
                         </div>
                         <div class="order-item">
-                            <img src="https://via.placeholder.com/100" alt="Product 2">
+                            <img src="images/Wireless_Headphones.jpg" alt="Product 2">
                             <div class="item-details">
                                 <h4>Headphones</h4>
                                 <p>Quantity: 1</p>
@@ -92,7 +94,7 @@
                     </div>
                     <div class="order-items">
                         <div class="order-item">
-                            <img src="https://via.placeholder.com/100" alt="Product 3">
+                            <img src="images/Smart Watch.jpg " alt="Product 3">
                             <div class="item-details">
                                 <h4>Smart Watch</h4>
                                 <p>Quantity: 1</p>
