--- a/product_details.html
+++ b/product_details.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/all.min.css"
-    <link rel="stylesheet" href="css/fontawesome.min.css"> <!-- Local Font Awesome -->
+    <link rel="stylesheet" href="css/all.min.css" <link rel="stylesheet" href="css/fontawesome.min.css">
+    <!-- Local Font Awesome -->
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">  -->
     <link rel="stylesheet" href="css/styles.css"> <!-- Correct path to style.css -->
     <title>Team06 Store</title>
 </head>
+
 <body>
     <header>
         <div class="logo">Team06</div>
@@ -26,20 +28,21 @@
                 <a href="#" class="icon"><i class="fas fa-user"></i></a>
             </div>
         </nav>
-    </header>   
+    </header>
 
     <!-- Product Details Section -->
     <div class="product-details">
-        <h1>Havic HV G-92 Gamepad</h1>        
+        <h1>Havic HV G-92 Gamepad</h1>
         <img src="images/Havic HV G-92 Gamepad.jpg" alt="Havic HV G-92 Gamepad" />
         <div class="rating">
             <span>★★★★☆</span> (150 Reviews)
         </div>
         <div class="price">$192.00</div>
         <p class="description">
-            PlayStation 5 Controller Skin High quality vinyl with air channel adhesive for easy bubble free install & mess free removal Pressure sensitive.
+            PlayStation 5 Controller Skin High quality vinyl with air channel adhesive for easy bubble free install &
+            mess free removal Pressure sensitive.
         </p>
-        
+
         <div class="options">
             <div class="colours">
                 <label>Colours:</label>
@@ -104,4 +107,5 @@
         </div>
     </footer>
 </body>
+
 </html>
