--- a/products.html
+++ b/products.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Products - Team06</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <header>
         <nav>
@@ -74,7 +76,7 @@
                     <button class="btn">Add to Cart</button>
                 </div>
                 <div class="product-card">
-                    <img src="images/1633680572_IMG_1618142.jpg" alt="Product 3 - Smart Watch">
+                    <img src="images/Smart Watch.jpg" alt="Product 3 - Smart Watch">
                     <h3>Smart Watch</h3>
                     <p class="description">Track your fitness and stay connected</p>
                     <p class="price">$199.99</p>
@@ -117,4 +119,5 @@
     </footer>
     <script src="script.js"></script>
 </body>
+
 </html>
